# Divide-and-Ignore-Algorithm

./: README.md  pyproject.toml
src/divide_and_ignore/: __init__.py  divide_and_ignore.py
tests/: test_divide_and_ignore.py
