[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "divide-and-ignore-algorithm"
version = "0.1"
authors = [ { name="shashwot2", email = "shashwot_07@hotmail.com"},]
description = "A meme package that divides a list randomly and ignores one half."
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/shashwot2/Divide-and-ignore-algorithm"
